# harness-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
.harness-cli/: .current-task  .developer
.harness-cli/kb/prd/: _module-template.md  ai-tool-registry.md  cli-commands.md  file-management.md  index.md  kb-system.md  migration-system.md  platform-configurators.md  project-detection.md  session-recording.md  task-lifecycle.md  template-fetcher.md  template-system.md  version-management.md  weekly-report.md
.harness-cli/kb/tech/: _module-template.md  component-map.md  cross-cutting.md  data-models.md  decisions.md  index.md  overview.md
.harness-cli/tasks/04-10-04-10-update-kb/: check.jsonl  task.json
src/: lib.rs  main.rs
src/commands/: doctor.rs  init.rs  mod.rs  scan.rs  status.rs  update.rs
src/configurators/: antigravity.rs  claude.rs  codebuddy.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  iflow.rs  kilo.rs  kiro.rs  mod.rs  opencode.rs  qoder.rs  shared.rs  windsurf.rs  workflow.rs
src/constants/: mod.rs  paths.rs  version.rs
src/migrations/: mod.rs
src/templates/: antigravity.rs  claude.rs  codebuddy.rs  codex.rs  copilot.rs  cursor.rs  extract.rs  gemini.rs  harness_cli.rs  iflow.rs  kilo.rs  kiro.rs  markdown.rs  mod.rs  opencode.rs  qoder.rs  windsurf.rs
src/types/: ai_tools.rs  migration.rs  mod.rs
src/utils/: code_indexer.rs  compare_versions.rs  file_writer.rs  mod.rs  project_detector.rs  proxy.rs  template_fetcher.rs  template_hash.rs
tests/: regression.rs
(+270 files in other folders)
